# parallel-computing-coursework

./: Cargo.toml  README.md
src/: fs_helpers.rs  inverted_index.rs  lib.rs  main.rs  messages.rs  server.rs  word_filtering.rs  word_stemming.rs
