[package]
name = "parallel_computing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2"
stringreader = "0.1"
clap = "4.0"
env_logger = "0.9"
log = "0.4"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
porter-stemmer = "0.1"